syntax = "proto3";
package panacea.market.v2;

option go_package = "github.com/medibloc/panacea-core/x/market/types";

import "panacea/market/v2/deal.proto";
import "google/protobuf/any.proto";

// GenesisState defines the market module's genesis state.
message GenesisState {
  map<uint64, Deal> deals = 1;
  uint64 next_deal_number = 2;
}